feat: add plugin management panel and related functionality

--- a/src/openclaw_launcher/ui/i18n/en.json
+++ b/src/openclaw_launcher/ui/i18n/en.json
@@ -4,6 +4,7 @@
     "tab_dependencies": "Dependencies",
     "tab_backups": "Backups",
     "tab_logs": "Logs",
+    "tab_plugins": "Plugins",
     "tab_advanced": "Advanced",
     "lang_switch": "中/En",
     "header_clean_launcher": "Instances",
@@ -144,6 +145,36 @@
     "msg_default_restart_hint": "If an instance is already running, restart it to apply the new runtime PATH.",
     "msg_no_versions": "No versions available",
     "status_no_installed": "Not Installed",
+    "header_plugins": "Plugin Management",
+    "lbl_select_instance": "Select instance:",
+    "opt_select_instance": "Select an instance",
+    "ph_plugin_name": "Enter plugin package, e.g. @user/project",
+    "btn_install_plugin": "Install Plugin",
+    "btn_install": "Install",
+    "btn_help": "Help",
+    "section_recommended_plugins": "Recommended Plugins",
+    "col_plugin_source": "Source",
+    "col_plugin_name": "Plugin",
+    "col_plugin_action": "Action",
+    "status_not_found": "Directory not found",
+    "status_empty": "Empty",
+    "msg_plugin_name_required": "Please enter a plugin package name",
+    "msg_plugin_install_busy": "A plugin installation task is already running. Please wait.",
+    "msg_plugin_installing": "Installing plugin {name}...",
+    "msg_plugin_install_success": "Plugin {name} installed successfully",
+    "msg_plugin_install_output": "Plugin {name} installed successfully.\n\nOutput:\n{output}",
+    "msg_plugin_install_failed_short": "Plugin {name} installation failed",
+    "msg_plugin_install_failed": "Failed to install plugin {name}: {error}",
+    "msg_plugin_install_failed_unknown": "Plugin installation failed (no detailed output)",
+    "msg_plugin_node_not_found": "Node runtime not found. Please install Node in the Dependencies tab first",
+    "msg_openclaw_home_not_found": "openclaw.mjs was not found. Please ensure OpenClaw is installed",
+    "msg_select_instance_required": "Please select an instance first",
+    "msg_instance_not_found": "Instance directory not found",
+    "btn_uninstall": "Uninstall",
+    "msg_confirm_uninstall": "Uninstall plugin {name}?",
+    "msg_uninstall_success": "Plugin {name} uninstalled",
+    "msg_uninstall_failed": "Failed to uninstall plugin {name}: {error}",
+    "msg_uninstall_missing": "Plugin directory not found",
     "status_backup_idle": "Backup status: Idle",
     "status_backup_running": "Creating backup for {name}...",
     "status_restore_running": "Restoring backup to {name}..."
