--- a/src/openclaw_launcher/ui/i18n/zh.json
+++ b/src/openclaw_launcher/ui/i18n/zh.json
@@ -4,6 +4,7 @@
     "tab_dependencies": "依赖检查",
     "tab_backups": "备份管理",
     "tab_logs": "日志查看",
+    "tab_plugins": "插件管理",
     "tab_advanced": "高级设置",
     "lang_switch": "En/中",
     "header_clean_launcher": "实例",
@@ -144,6 +145,36 @@
     "msg_default_restart_hint": "若实例正在运行，请重启该实例以应用新的运行时 PATH。",
     "msg_no_versions": "无可用的版本",
     "status_no_installed": "未安装",
+    "header_plugins": "插件管理",
+    "lbl_select_instance": "选择实例:",
+    "opt_select_instance": "请选择实例",
+    "ph_plugin_name": "输入插件包名，如 @user/project",
+    "btn_install_plugin": "安装插件",
+    "btn_install": "安装",
+    "btn_help": "帮助",
+    "section_recommended_plugins": "推荐插件",
+    "col_plugin_source": "来源",
+    "col_plugin_name": "插件",
+    "col_plugin_action": "操作",
+    "status_not_found": "目录不存在",
+    "status_empty": "空",
+    "msg_plugin_name_required": "请输入插件包名",
+    "msg_plugin_install_busy": "已有插件安装任务在进行中，请稍候",
+    "msg_plugin_installing": "正在安装插件 {name}...",
+    "msg_plugin_install_success": "插件 {name} 安装成功",
+    "msg_plugin_install_output": "插件 {name} 安装成功。\n\n输出：\n{output}",
+    "msg_plugin_install_failed_short": "插件 {name} 安装失败",
+    "msg_plugin_install_failed": "安装插件 {name} 失败：{error}",
+    "msg_plugin_install_failed_unknown": "插件安装失败（无详细输出）",
+    "msg_plugin_node_not_found": "未找到 Node 运行时，请先在“依赖检查”页面安装 Node",
+    "msg_openclaw_home_not_found": "未找到 openclaw.mjs，请确认 OpenClaw 已安装",
+    "msg_select_instance_required": "请先选择一个实例",
+    "msg_instance_not_found": "实例目录不存在",
+    "btn_uninstall": "卸载",
+    "msg_confirm_uninstall": "确认卸载插件 {name} 吗?",
+    "msg_uninstall_success": "插件 {name} 已卸载",
+    "msg_uninstall_failed": "卸载插件 {name} 失败: {error}",
+    "msg_uninstall_missing": "插件目录不存在",
     "status_backup_idle": "备份状态: 空闲",
     "status_backup_running": "正在为 {name} 创建备份...",
     "status_restore_running": "正在将备份还原到 {name}..."
